syntax = "proto3";
option go_package = "go-downloader/pb;pb";

package pb; // 包名
message MapFieldEntry {
  string key = 1;
  string value = 2;
}
message Proxy {
	string ProxyUrl=1;
}
message Request {
	string    Url=1;                             // Set request URL
  repeated	MapFieldEntry Header=2;      // Set request header
  	string Method=3;                 // Set request Method
	  bytes Body   =4;                // Set request body
	repeated	MapFieldEntry Params=5;     // Set request query params
	  Proxy Proxy=6;                 // Set request proxy addr
	repeated	MapFieldEntry Cookies=7;     // Set request cookie
	repeated	MapFieldEntry Meta=8; // Set other data
	  bool AllowRedirects =9;                   // Set if allow redirects. default is true
	repeated	MapFieldEntry MaxRedirects=10;                    // Set max allow redirects number
	string ID =11;
}
message DownloadRequest {
  string fileName = 2;
  Request request=4; 
}

message DownloadResponse {
    string dst = 1;
    int32 status = 2;
    string msg =3;
   }

// 定义服务
service Downloader {
  rpc Download (DownloadRequest) returns (DownloadResponse) {}
}